--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "@badeball/cypress-cucumber-preprocessor": "^20.1.2",
     "@bahmutov/cypress-esbuild-preprocessor": "^2.2.2",
-    "cypress": "^13.13.3"
+    "cypress": "^13.13.3",
+    "oracledb": "^6.6.0"
   }
 }
